[project]
name = "learning-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bootstrap4>=0.1.0",
    "django>=5.2.7",
    "django-bootstrap4>=25.2",
    "django-heroku>=0.3.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.1",
]
